styles.css
/* ... */
/* reset */

header, section, nav, footer {
    display: block;
}

html, body, ul, ol, hr, h1, h2, h3, p, form, fieldset {
    margin: 0;
    padding: 0;
    font-weight: normal;
}

ul, ol {
    list-style: none;
}

img {
    border: 0;
    -ms-interpolation-mode: bicubic;
}

input, img {
    max-width: 100%;
}

body, a, button {
    color: #fff;
}

/* common styles for all resolutions */

h1, h2,
input, select, .select, button,
#obstacles,
.description,
#call-to-action
{
    text-transform: uppercase;
    font-family: 'KomikaTitle-PaintRegular', sans-serif;
}

#logo {
    margin-bottom: 17px;
}

h1 {
    color: #fe6537;
    font-size: 2em;
    text-shadow: 0.0384615384615385em 0.0576923076923077em 0 #fff;
    letter-spacing: 0.0307692307692308em;
    padding-bottom: 0.1730769230769231em;
    margin-top: 0.3461538461538462em;

    /* text shadow in IE */
    background-color: #ff1ff1\9;
    -ms-filter: "progid:DXImageTransform.Microsoft.Chroma(Color=#ff1ff1) progid:DXImageTransform.Microsoft.DropShadow(Color=#ffffff, OffX=3, OffY=3)";
    filter: progid:DXImageTransform.Microsoft.DropShadow(OffX=3, OffY=3, Color=#ffffff);
}

* html h1 { background-color: transparent; }

section {
    overflow: hidden;
    position: relative;
}

h2, #obstacles h3 {
    font-size: 2.5em;
}

h2,
#obstacles h3,
h4,
button,
#call-to-action {
    text-shadow: 0.125em 0.125em 0 rgba(0,0,0,.2);
}

h2 {
    text-indent: 3px;
}

h2:after {
    background: transparent url('images/rally.gif') repeat-x 0 50%;
    display: block;
    margin-top: -1em;
    height: 40px;
    content: "";
}

h3 {
    font-size: 1.25em;
}

hr {
    background: #17343d;
    height: 7px;
    border: 0;
    opacity: .1;
    filter: alpha(opacity=10);
}

section:before,
section:after {
    content: "";
    display: block;
    height: 7px;
    width: 100%;
    background: #000;
    opacity: .08;
    filter: alpha(opacity=8);
    position: absolute;
}

section:before {
    top: 0;
}

section:after {
    bottom: 0;
}

html {
    background: #80c1d6 url('images/texture-blue.jpg');
}

body {
    background: url('images/splash.png') no-repeat 50% 0;
    font: normal 100% 'OpenSansSemibold', Verdana, sans-serif;
}

.content {
    padding: 0 0.625em;
    margin: 0 auto;
}

nav {
    background: url('images/dither.gif') repeat 50% 0;
    background: rgba(15,40,48,.05);
    text-align: center;
    position: fixed;
    width: 100%;
    z-index: 100;
}

nav li, nav a {
    display: inline-block;
    *display: inline;
    zoom: 1;
}

nav a {
    text-decoration: none;
    text-transform: uppercase;
    font-size: 1em;
    line-height: 1.5em;
    padding: 0 1em;
}

nav a:hover {
    background: url('images/dither.gif') repeat 50% 0;
    background: rgba(0,0,0,.1);
}

header {
    text-align: center;
    padding: 4.5em 0 4.663636363636364em;
}

#obstacles,
input, select, .select {
    background: #fe6638 url('images/texture-orange.jpg');
}

#obstacles {
    padding-bottom: 69px;
}

#obstacles h2 {
    padding: 1.19047619047619em 0 1.475em;
}

#obstacles h2:after {
    margin-left: 281px;
}

#obstacles li {
    background: #80b238 url('images/texture-green.jpg');
    display: inline-block;
    *display: inline;
    zoom: 1;
    position: relative;
    height: 46.80851063829787%;
    width: 46.80851063829787%;
    margin: 0 3.191489361702128% 3.191489361702128% 0;
    vertical-align: top;
    text-align: center;
}

#obstacles a {
    font-size: 0.875em;
    text-decoration: none;
    display: inline-block;
    *display: inline;
    zoom: 1;
    padding: 0 10.22727272727273%;
    width: 79.54545454545455%;
    vertical-align: bottom;
    color: #fff;

    -moz-transition: background .5s ease-out, box-shadow .5s ease-out;
    -webkit-transition: background .5s ease-out, box-shadow .5s ease-out;
    -o-transition: background .5s ease-out, box-shadow .5s ease-out;
    -ms-transition: background .5s ease-out, box-shadow .5s ease-out;
    transition: background .5s ease-out, box-shadow .5s ease-out;
}

#obstacles a, #obstacles li {
   -moz-border-radius: 6px;
    border-radius: 6px;
}

#obstacles a:hover {
    background-color: rgba(182,255,54,.5);
    box-shadow: 0 0 .2em #7fb325;
}

#obstacles a span {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0.7142857142857143em 0 1em;
    margin: 0 -10.22727272727273%;
}

#obstacles a .description {
    display: none;
}

#obstacles div.column {
    display: none;
}

#obstacles h3,
#obstacles h4,
button span {
    line-height: 1em;
    margin: 0;
    padding: 0;

    -webkit-transform: rotate(-7.5deg);
    -moz-transform: rotate(-7.5deg);
    -ms-transform: rotate(-7.5deg);
    -o-transform: rotate(-7.5deg);
}

#obstacles h3 {
    font-size: 40px;
    padding-top: 14.8936170212766%;
}

#obstacles h4 {
    padding: 14px 0 100px;
    font-size: 21.18px;
}

#obstacles img {
    position: relative;
}

#prizes {
    background: #80b238 url('images/texture-green.jpg');
    padding-bottom: 120px;
}

#prizes h2 {
    padding: 1.75em 0 2.15em;
}

#prizes h2:after {
    margin-left: 181px;
}

#prizes li {
    margin: 0;
    margin-bottom: 3.5em;
    vertical-align: top;
    text-align: center;
}

#be-a-contestant {
    padding-bottom: 140px;
}

#be-a-contestant h2 {
    padding: 1.8em 0 1.9em;
}

#be-a-contestant h2:after {
    margin-left: 421px;
    background-position: 20px 50%;
}

#be-a-contestant div.column {
    text-align: center;
}

fieldset {
    text-align: left;
    border: 0;
}

label {
    display: none;
}

input, select, .select {
    -moz-border-radius: 4px;
    border-radius: 4px;
    border: 0;
    height: 3.1875em;
    font-size: 1em;
    text-indent: 0.8125em;
    width: 100%;
    color: #fff;
    margin-bottom: 0.9375em;
    -webkit-appearance: none;
}

input {
    display: block;
}

::-webkit-input-placeholder { color: #fff; }
:-moz-placeholder { color: #fff; }


.select {
    line-height: 50px;
    position: relative;
}
/* ... */

